2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-left_justify.c: Cleanup.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.gdb: Remove file.
	* Makefile.in: Remove GDB auxiliary rule to create GDB scripts for
	each test.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/islessgreaterd32.c (islessgreater): clean ups implementation
	to use only libdecnumber operations.
	* ieee754r/isgreaterd32.c (isgreater): Likewise.
	* ieee754r/isgreaterequald32.c (isgreaterequal): Likewise.
	* ieee754r/islessequald32.c (islessequal): Likewise.
	* ieee754r/islessd32.c (isless): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_32: Fix lookup
	table values.
	(bid_required_bits_64): Use bid_required_bits_32 instead.
	* libdecnumber/bid/decimal128.c (decDigitsToBID): Fix BID encoding.
	* libdecnumber/bid/decimal32.c (decDigitstoBID): Likewise.
	* libdecnumber/bid/decimal64.c (decDigitstoBID): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/logbd32.c: Cleanup implementation to use only libdecnumber
	operations.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-numdigits.c: Cleanup.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-setexp.c: New file: setexpd[32|64|128] testcase.
	* Makefile.in: Add setexp testcase rules.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-getexp.c: Add _Decimal32 and _Decimal128 tests and remove
	check for infinity for _Decimal64.

2014-05-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/bid/bid-coeffbits.h: New file: function to calculate
	required bits to express BID coefficient.
	* libdecnumber/bid/decimal128.c (decimal128FromNumber): Add BID
	support.
	(decimal128ToNumber): Likewise.
	(decimal128FromString): Cleanup comments.